# Inception

./: .gitignore  BLOG_POST.md  Cargo.toml  README.md  SNIPPY.md  STATIC_REFLECTION.md
.github/workflows/: ci.yml
inception/: Cargo.toml
inception-macros/: Cargo.toml
inception-macros/src/: derive.rs  inception.rs  lib.rs  primitive.rs
inception-test/: Cargo.toml
inception-test/benches/: comparison.rs
inception-test/src/: arrow.rs  clone.rs  context.rs  data.rs  debug.rs  default.rs  eq.rs  hash.rs  lib.rs  lifetime.rs  perform.rs  types.rs
inception/src/: field.rs  lib.rs  meta.rs  ty.rs
