[workspace]
members = ["inception", "inception-macros", "inception-test"]
resolver = "2"

[workspace.dependencies]
deluxe = "0.5"
quote = "1"
paste = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
inception = { path = "./inception" }
inception-macros = { path = "./inception-macros", version = "0.1.0" }
